src/css/index.css
/* ... */
::-webkit-scrollbar-thumb {
    border-radius: 2px;
    background-color: var(--white);
}

/**
 * Tabbing
 */

a {
    border-radius: var(--radius-1);
}

.control {
    border-radius: var(--radius-2);
}

a:focus-visible,
.control:focus-visible {
    outline: 1px solid var(--blue);
    outline-offset: 3px;
}

/**
 * Tooltips
 */

.tooltip {
    display: inline-flex;
    position: fixed;
    opacity: 0;
    z-index: 100;
    transition-property: opacity, background-color, border-color, color;
    margin: -1.25rem 1rem;
    border: 1px solid var(--black);
    border-radius: var(--radius-2);
    background-color: var(--white);
    height: var(--button-size);
    pointer-events: none;
    color: var(--black);
    font-size: var(--body-text);
    font-size: var(--body-text);
    padding: 0 0.25em 0 0.5em;
    align-items: center;
    justify-content: center;
    font-family: 'Miller', 'Georgia Pro', 'Georgia', 'Plantin', serif;
    white-space: nowrap;
}

.tooltip > .star {
    shape-rendering: geometricPrecision;
    fill: var(--black);
    position: absolute;
    top: calc((0.5 * var(--button-size)) - ( 0.5 * var(--star-size)));
    left: calc(-0.5 * var(--star-size));
}

aside > button > .tooltip {
    position: absolute;
}

aside > button > .tooltip > .star,
.tooltip.is-left > .star {
    position: absolute;
    right: calc(-0.5 * var(--star-size));
    left: unset;
}

.tooltip.is-under > .star {
    top: calc(-0.5 * var(--star-size));
    left: 50%;
}

.tooltip::after,
.tooltip::before {
    display: none;
}

/* DESKTOP
   ****************************************************************************/

@media screen and (min-width: 1440px) {
    /* Variables
   ========================================================================== */

    :root {
        --heading-2: 4rem;
        --heading-3: 2.75rem;
        --heading-4: 1.5rem;
        --gutter-1: 16rem;
        --gutter-2: 24vw;
        --spacing-1: 1.125rem;
    }
}

/* TABLET
   ****************************************************************************/

@media screen and (max-width: 990px) {
    /* Variables
   ========================================================================== */

    :root {
        --gutter-1: 8rem;
        --gutter-2: 10vw;
        --button-text: 1.125rem;
        --heading-2: 3rem;
        --heading-3: 2rem;
        --heading-4: 1rem;
        --button-size: 2rem;
        --star-size: 0.5rem;
    }
}

/* MOBILE LANDSCAPE
   ****************************************************************************/

@media screen and (max-width: 650px) {
    /* Variables
   ========================================================================== */

    :root {
        --gutter-1: 3.25rem;
        --gutter-2: var(--spacing-3);
        --spacing-1: 0.75rem;
        --button-text: 1rem;
        --radius-1: 0.2rem;
        --button-size: 2rem;
        --body-text: 0.88rem;
    }

    /* Document layout
   ========================================================================== */

    /**
     * Navigation
     */

    nav {
        grid-template-rows: var(--gutter-1);
        grid-template-columns: 0px 1fr;
    }

    #logo {
        right: auto;
        left: auto;
        width: 9rem;
    }

    #title {
        position: unset;
    }

    /**
     * Main
     */

    section:first-of-type article {
        padding-top: 6rem;
    }

    /**
     * Footer
     */

    footer {
        display: block;
        margin-bottom: 0;
        padding: 1rem;
        height: unset;
        text-align: center;
    }

    /* Functionality
   ========================================================================== */

    /**
     * Bottom controls
     */

    section aside {
        display: none;
    }

    aside {
        gap: var(--spacing-2);
        padding: var(--spacing-2);
        right: var(--spacing-2);
    }
    
    /**
     * Navigation animation
     */

    #title {
        position: unset;
    }

    #logo.off {
        translate: 230%;
    }

    nav menu {
        translate: -100%;
        margin: 0;
    }

    nav menu.on {
        translate: 0%;
    }

    /* Variables
   ========================================================================== */

    /**
    * Construction lines
    */

    hr:nth-of-type(1) {
        display: none;
    }
}

/* MOBILE PORTRAIT
   ****************************************************************************/

@media screen and (max-width: 388px) {
    /* Variables
   ========================================================================== */

    :root {
        --gutter-1: 2.25rem;
        --spacing-1: 0.5rem;
        --button-text: 0.88rem;
        --heading-2: 2.25rem;
        --heading-3: 1.5rem;
        --heading-4: 0.88rem;
    }

    /* Document layout
   ========================================================================== */

    /**
    * Navigation
    */

    #logo {
        width: 8rem;
    }

    /**
     * Main
     */

    h2 {
        padding-right: 4rem;
    }

    /**
     * Grid
     */

    .grid.is-2 {
        grid-template-columns: 1fr;
    }

    .grid.is-3 {
        grid-template-columns: 1fr 1fr;
    }

    .grid.is-4 {
        grid-template-columns: 1fr 1fr 1fr;
    }
}

